# serializer version: 1
# name: test_r4_asmaddr2_bf16_srvw_golden
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_UserArgs_MT128x128x16Ln1uG_rHoxuvX4GgFUa4aQyl6vWT_LBQba5sQg2X_V0=',
      'err': 0,
    }),
  ])
# ---
# name: test_r4_asmaddr2_fp32_golden
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x256x16_MI16x16x0OScEraub9w8HijAiQn_4Jslw6mmpSpnsUp6K80wkho=',
      'err': 0,
    }),
  ])
# ---
